test/tests/errors/error-record-removed-from-environment2.sm
// true
// false
// false
/**/
/**/

program {
    record person(name: string, age: int);
    with person do
        age = 22;
    output age;
}